--- a/Areas/Admin/Views/TongHopSoLieuDKXTs/TheoDoiNopLePhi.cshtml
+++ b/Areas/Admin/Views/TongHopSoLieuDKXTs/TheoDoiNopLePhi.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<HDU_AppXetTuyen.Models.TongHopSoLieuXetTuyen>
+@model IEnumerable<HDU_AppXetTuyen.Models.TongHopSoLieuXetTuyen>
 
 @{
     ViewBag.Title = "View1";
