--- a/Views/DangKyXetTuyenKhac/DanhGia.cshtml
+++ b/Views/DangKyXetTuyenKhac/DanhGia.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "DanhGia";
+    ViewBag.Title = "Đăng ký xét tuyển";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -46,7 +46,7 @@
                 <div class="row">
                     <div class="col-xxl-12">
                         <div class="table-container">
-                            <table class="table table-hover">
+                            <table class="table table-striped">
                                 <thead>
                                     <tr>
                                         <th style="vertical-align:middle;">Nguyện vọng</th>
@@ -127,7 +127,7 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-xxl-4">
-                        <table class="table table-hover">
+                        <table class="table">
                             <thead>
                                 <tr>
                                     <th colspan="2">Chọn ngành và loại kết quả xét <font color="red">(*)</font></th>
@@ -193,7 +193,7 @@
                     <div class="col-xxl-4">
                         <div class="row md-0">
                             <div class="col-xxl-12">
-                                <table class="table table-hover">
+                                <table class="table">
                                     <thead>
                                         <tr>
                                             <th colspan="2" style="vertical-align:middle;">Thông tin kết quả nộp xét tuyển <font color="red">(*)</font></th>
@@ -284,7 +284,7 @@
                     <div class="col-xxl-4">
                         <div class="row md-0">
                             <div class="col-xxl-12">
-                                <table class="table table-hover">
+                                <table class="table">
                                     <thead>
                                         <tr>
                                             <th style="vertical-align:middle;">Tệp minh chứng khác</th>
@@ -371,8 +371,8 @@
                 </div>
                 <div class="row mb-3">
                     <div class="col-xxl-12" style="text-align:center">
-                        <input class="btn btn-primary" type="button" value="Đồng ý" onclick="SubmitData()" />
-                        <input class="btn btn-secondary" type="button" value="Hủy bỏ" onclick="_bt_HuyBo_Dkxt_NVM_OnClick(0,0,0)" />
+                        <input class="btn btn-outline-primary" type="button" value="Đồng ý thêm" onclick="SubmitData()" />
+                        <input class="btn btn-outline-secondary" type="button" value="Hủy bỏ" onclick="_bt_HuyBo_Dkxt_NVM_OnClick(0,0,0)" />
                     </div>
                 </div>
             </div>
