--- a/Views/DangKyXetTuyens/dkxthocba.cshtml
+++ b/Views/DangKyXetTuyens/dkxthocba.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "dkxthocba2";
+    ViewBag.Title = "Đăng ký xét tuyển";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -311,8 +311,9 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-xxl-12">
-                                                        <table class="table mt-0 mb-0" id="FilesList_GTUT_View" style="visibility:hidden"> 
-                                                        <tr style="display:none"><th colspan="2"><input type="hidden" id="txt_uploader_file_g" /></th></tr></table>
+                                                        <table class="table mt-0 mb-0" id="FilesList_GTUT_View" style="visibility:hidden">
+                                                            <tr style="display:none"><th colspan="2"><input type="hidden" id="txt_uploader_file_g" /></th></tr>
+                                                        </table>
                                                     </div>
                                                 </div>
                                             </td>
@@ -326,13 +327,13 @@
                                 <span id="Diem_All_Error" class="small mb-1 text-danger"></span>
                             </div>
                         </div>
-                        <div class="row mb-3">
-                            <div class="col-xxl-12" style="text-align:center">
-                                <input class="btn btn-primary col-5 col-auto" id="bt_ok_div_update_aspirations" type="button" value="Đồng ý" />
-                                <input class="btn btn-secondary col-5 col-auto" id="bt_close_div_update_aspirations_second" type="button" value="Hủy bỏ" />
-                            </div>
-                        </div>
+                    </div>
+                </div>
 
+                <div class="row mb-3">
+                    <div class="col-xxl-12" style="text-align:center">
+                        <input class="btn btn-outline-primary col-lg-1 col-4" id="bt_ok_div_update_aspirations" type="button" value="Đồng ý thêm" />
+                        <input class="btn btn-outline-secondary col-lg-1 col-4" id="bt_close_div_update_aspirations_second" type="button" value="Hủy bỏ" />
                     </div>
                 </div>
             </div>
