--- a/Views/DangKyXetTuyenThang/Index.cshtml
+++ b/Views/DangKyXetTuyenThang/Index.cshtml
@@ -16,6 +16,10 @@
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
     }
+
+    .btn, .form-select, .form-control {
+        border-radius: 3px;
+    }
 </style>
 <header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
     <div class="container-fluid px-4">
@@ -24,7 +28,7 @@
                 <div class="col-auto mb-1">
                     <div class="page-header-title  mb-2">
                         <div class="page-header-icon"><i data-feather="list"></i></div>
-                        <span id="sp_tieude">Đăng ký tuyển thẳng theo quy định của trường (áp dụng cho học sinh đạt giải các môn học từ giải Ba trở lên)</span>                        
+                        <span id="sp_tieude">Đăng ký tuyển thẳng theo quy định của trường (áp dụng cho học sinh đạt giải các môn học từ giải Ba trở lên)</span>
                     </div>
                 </div>
 
@@ -173,7 +177,7 @@
                                         </div>
                                     </td>
                                 </tr>
-</table>
+                        </table>
                     </div>
                     <div class="col-xxl-4">
                         <div class="row mt-0 mb-1">
@@ -268,7 +272,7 @@
                                                 <div class="row mt-0 md-0">
                                                     <div class="col-xxl-12">
                                                         <div class="form-group mb-2">
-                                                            <label for="formFileMultiple" class="form-label">Học bạ / Bằng tốt nghiệp </label>
+                                                            <label class="form-label">Học bạ / Bằng tốt nghiệp </label>
                                                             <div class="col-md-12">
                                                                 <input class="form-control" id="files_hocba" multiple="multiple" name="files" type="file" data-val="true" data-val-required="Vui lòng chọn file học bạ"
                                                                        accept="application/pdf,.png, .jpeg, .jpg" />
@@ -285,8 +289,8 @@
 
                                                 <div class="row mt-0 md-0">
                                                     <div class="col-xxl-12">
-                                                        <div class="form-group mb-2">
-                                                            <label for="formFileMultiple" class="form-label">Căn cước công dân</label>
+                                                        <div class="form-group">
+                                                            <label  class="form-label">Căn cước công dân</label>
                                                             <div class="col-md-12">
                                                                 <input class="form-control" id="files_cccd" multiple="multiple" name="files" type="file" data-val="true" data-val-required="Vui lòng chọn file CCCD"
                                                                        accept="application/pdf,.png, .jpeg, .jpg" />
@@ -303,8 +307,8 @@
 
                                                 <div class="row mt-0 md-0">
                                                     <div class="col-xxl-12">
-                                                        <div class="form-group mb-2">
-                                                            <label for="formFileMultiple" class="form-label">Bằng Tốt nghiệp (Nếu có)</label>
+                                                        <div class="form-group">
+                                                            <label class="form-label">Bằng Tốt nghiệp (Nếu có)</label>
                                                             <div class="col-md-12">
                                                                 <input class="form-control" id="files_bangtn" multiple="multiple" name="files" type="file" data-val="true" data-val-required="Vui lòng chọn file Bằng TN"
                                                                        accept="application/pdf,.png, .jpeg, .jpg" />
@@ -316,41 +320,38 @@
                                                                 </table>
                                                             </div>
                                                         </div>
-                                                    </div>                                                  
+                                                    </div>
                                                 </div>
 
                                                 <div class="row mt-0 md-0">
                                                     <div class="col-xxl-12">
-                                                        <div class="form-group mb-2">
-                                                            <label for="formFileMultiple" class="form-label">Minh chứng ưu tiên (Nếu có)</label>
+                                                        <div class="form-group">
+                                                            <label class="form-label">Minh chứng ưu tiên (Nếu có)</label>
                                                             <div class="col-md-12">
                                                                 <input class="form-control" id="files_uutien" multiple="multiple" name="files" type="file" data-val="true" data-val-required="Vui lòng chọn file Bằng TN"
                                                                        accept="application/pdf,.png, .jpeg, .jpg" />
                                                                 <span class="field-validation-valid text-primary" data-valmsg-for="files" data-valmsg-replace="true"></span>
                                                                 <table class="table" id="FilesList_UuTien_View" style="visibility:hidden; width: 100%">
                                                                     <tr style="display:none">
-                                                                        <th colspan="3"><input type="hidden" id="UuTien_Files" /></th>
+                                                                        <th colspan="2"><input type="hidden" id="UuTien_Files" /></th>
                                                                     </tr>
                                                                 </table>
                                                             </div>
                                                         </div>
-                                                    </div>                                                 
+                                                    </div>
                                                 </div>
-
-                                                <div class="row mt-0 md-0">
-                                                    <div class="col-xxl-12">
-                                                        <div class="col-xxl-12" style="text-align:center">
-                                                            <input class="btn btn-primary" type="button" value="Đồng ý" onclick="SubmitData()" />
-                                                            <input class="btn btn-secondary" type="button" value="Hủy bỏ" onclick="_bt_HuyBo_Dkxt_NVM_OnClick(0,0,0)" />
-                                                        </div>
-                                                    </div>                                                  
-                                                </div>
-
                                             </td>
                                         </tr>
                                 </table>
                             </div>
                         </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xxl-12" style="text-align:center">
+                        <input class="btn btn-outline-primary" type="button" value="Đồng ý thêm" onclick="SubmitData()" />
+                        <input class="btn btn-outline-secondary" type="button" value="Hủy bỏ" onclick="_bt_HuyBo_Dkxt_NVM_OnClick(0,0,0)" />
                     </div>
                 </div>
             </div>
@@ -724,7 +725,7 @@
                     let data = response.data
                     $.each(data, function (i, result) {
                         $('#Nganh_ID').append('<option value="' + result.Nganh_ID + '">' + result.NganhTenNganh + '</option>');
-                     });                  
+                     });
                 }
             },
             error: function (errormessage) {
