--- a/Views/DangKyXetTuyens/DkxthocbaEdit.cshtml
+++ b/Views/DangKyXetTuyens/DkxthocbaEdit.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "dkxthocba2";
+    ViewBag.Title = "Đăng ký xét tuyển";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -31,7 +31,21 @@
                     <div class="page-header-title mb-2">
                         <div class="page-header-icon"><i data-feather="list"></i></div>
                         <span id="sp_tieude">Đăng ký xét tuyển sử dụng kết quả học tập ở THPT (Xét tuyển bằng học bạ)</span>
+                        <script>
+                            $(document).ready(function () {
+                                let sp_tieude = document.getElementById('sp_tieude');
+                                function reportWindowSize() {
 
+                                    if (window.innerWidth <= 800) {
+                                        sp_tieude.innerHTML = "ĐKXT bằng KQ học tập THPT (Xét học bạ)";
+                                    }
+                                    else {
+                                        sp_tieude.innerHTML = "Đăng ký xét tuyển sử dụng kết quả học tập ở THPT (Xét tuyển bằng học bạ)";
+                                    }
+                                }
+                                window.onresize = reportWindowSize;
+                            })
+                        </script>
                     </div>
                 </div>
 
@@ -47,7 +61,6 @@
                 <button class="btn-close" id="bt_close_div_update_aspirations_first" type="button" aria-label="Close"></button>
             </div>
             <div class="card-body">
-
                 <div class="row">
                     <div class="col-xxl-4">
                         <table class="table">
@@ -166,10 +179,9 @@
                                         <tr>
                                             <td>
                                                 <div class="row mt-0 md-0">
-                                                    <label for="files_cancuoc_congdan" class="form-label"><span id="div_mc_btn"><a href="#" style="text-decoration:none">Tệp 1</a>&nbsp;<a href="#" style="text-decoration:none">Tệp 2</a></span></label>
+                                                    <label class="form-label">Học bạ (<span id="sp_view_mc_hocba"></span>)</label>
                                                     <div class="col-xxl-12">
-                                                        <input id="files_hocba" type="file" multiple class="form-control" data-val="true" data-val-required="Vui lòng chọn file học bạ"
-                                                               accept=".pdf,.png, .PNG,.jpeg,.JPEG,.jpg,.JPG" />
+                                                        <input id="files_hocba" name="files_hocba" type="file" multiple class="form-control" accept=".pdf,.png, .PNG,.jpeg,.JPEG,.jpg,.JPG" />
                                                         <span id="SP_HocBa_Error" class="small mb-1 text-danger"></span>
                                                     </div>
                                                     <div class="col-xxl-12">
@@ -204,24 +216,9 @@
                                                 <div class="row mt-0 md-0">
                                                     <div class="col-xxl-12">
                                                         <div class="form-group mb-2">
-                                                            <label for="files_cancuoc_congdan" class="form-label">Căn cước công dân <span id="div_mc_btn"><a href="#" style="text-decoration:none">Tệp 1</a>&nbsp;<a href="#" style="text-decoration:none">Tệp 2</a></span></label>
+                                                            <label class="form-label">Bằng tốt nghiệp (<span id="sp_view_mc_bang"></span>)</label>
                                                             <div class="col-md-12">
-                                                                <input class="form-control" id="files_cancuoc_congdan" multiple="multiple" name="files_cancuoc_congdan" type="file" data-val="true" data-val-required="Vui lòng chọn file CCCD"
-                                                                       accept=".pdf,.png, .PNG,.jpeg,.JPEG,.jpg,.JPG" />
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-xxl-12">
-                                                        <table class="table mt-0 mb-0" id="FilesList_CCCD_View" style="visibility:hidden"> <tr style="display:none"><th colspan="2"><input type="hidden" id="txt_uploader_file_cccd" /></th></tr></table>
-                                                    </div>
-                                                </div>
-
-                                                <div class="row mt-0 md-0">
-                                                    <div class="col-xxl-12">
-                                                        <div class="form-group mb-2">
-                                                            <label for="files_bangtn" class="form-label">Bằng Tốt nghiệp (nếu có)<span id="div_mc_btn"><a href="#" style="text-decoration:none">Tệp 1</a>&nbsp;<a href="#" style="text-decoration:none">Tệp 2</a></span></label>
-                                                            <div class="col-md-12">
-                                                                <input class="form-control" id="files_bangtn" multiple="multiple" name="files" type="file" data-val="true" data-val-required="Vui lòng chọn file Bằng TN" accept=".pdf,.png, .PNG,.jpeg,.JPEG,.jpg,.JPG" />
+                                                                <input class="form-control" id="files_bangtn" multiple="multiple" name="files_bangtn" type="file" accept=".pdf,.png, .PNG,.jpeg,.JPEG,.jpg,.JPG" />
                                                             </div>
                                                         </div>
                                                     </div>
@@ -233,9 +230,25 @@
                                                 <div class="row mt-0 md-0">
                                                     <div class="col-xxl-12">
                                                         <div class="form-group mb-2">
-                                                            <label for="files_giayto_uutien" class="form-label">Giấy tờ ưu tiên (nếu có)</label>
+                                                            <label class="form-label">Căn cước công dân  (<span id="sp_view_mc_cccd"></span>)</label>
                                                             <div class="col-md-12">
-                                                                <input class="form-control" id="files_giayto_uutien" multiple="multiple" name="files" type="file" data-val="true" data-val-required="Vui lòng chọn giấy tờ ưu tiên" accept=".pdf,.png, .PNG,.jpeg,.JPEG,.jpg,.JPG" />
+                                                                <input class="form-control" id="files_cancuoc_congdan" multiple="multiple" name="files_cancuoc_congdan" type="file" accept=".pdf,.png, .PNG,.jpeg,.JPEG,.jpg,.JPG" />
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-xxl-12">
+                                                        <table class="table mt-0 mb-0" id="FilesList_CCCD_View" style="visibility:hidden"> <tr style="display:none"><th colspan="2"><input type="hidden" id="txt_uploader_file_cccd" /></th></tr></table>
+                                                    </div>
+                                                </div>
+
+
+
+                                                <div class="row mt-0 md-0">
+                                                    <div class="col-xxl-12">
+                                                        <div class="form-group mb-2">
+                                                            <label class="form-label">Giấy tờ ưu tiên (<span id="sp_view_mc_uutien"></span>)</label>
+                                                            <div class="col-md-12">
+                                                                <input class="form-control" id="files_giayto_uutien" multiple="multiple" name="files_giayto_uutien" type="file" accept=".pdf,.png, .PNG,.jpeg,.JPEG,.jpg,.JPG" />
                                                             </div>
                                                         </div>
                                                     </div>
@@ -254,25 +267,38 @@
                                 <span id="Diem_All_Error" class="small mb-1 text-danger"></span>
                             </div>
                         </div>
-                        <div class="row mb-3">
-                            <div class="col-xxl-12" style="text-align:center">
-                                <input class="btn btn-primary col-5 col-auto" id="bt_ok_div_update_aspirations" type="button" value="Đồng ý" />
-                                <input class="btn btn-secondary col-5 col-auto" id="bt_close_div_update_aspirations_second" type="button" value="Hủy bỏ" />
-                            </div>
-                        </div>
 
                     </div>
                 </div>
+
+                <div class="row mb-3">
+                    <div class="col-xxl-12" style="text-align:center">
+                        <input class="btn btn-outline-primary col-lg-1 col-4" id="bt_ok_div_update_aspirations" type="button" value="Đồng ý sửa" />
+                        <input class="btn btn-outline-secondary col-lg-1 col-4" id="bt_close_div_update_aspirations_second" type="button" value="Hủy bỏ" />
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
-    <div class="toast-container position-fixed bottom-0 end-0 p-3">
-        <div id="myToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="toast-header">
-                <strong class="me-auto">Toast Title</strong>
-                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    <div id="div_view_img" style="display:none">
+        <div class="card card-header-actions">
+            <div class="card-header mt-0 mb-0">
+                <span id="img_txt_card_hearder">Hình ảnh minh chứng</span>
+                <div>
+                    <button class="btn btn-outline-danger btn-sm" type="button" id="bt_delete_img_mc">Xóa</button>
+                    <button class="btn btn-outline-primary btn-sm" type="button" id="bt_close_div_view_img">Đóng</button>
+                </div>
             </div>
-            <div class="toast-body">
+            <div class="card-body" style="margin: 0px!important">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active" id="div_item_view_minhchung">
+                            <img class="d-block w-100 img-hide" id="img_view" display:none">
+                            <embed id="pdf_view" class="d-block w-100" style="height:700px; display:none" type="application/pdf" />
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -283,6 +309,16 @@
         background-color: transparent;
     }
 </style>
+<div class="toast-container position-fixed bottom-0 end-0 p-3">
+    <div id="myToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <strong class="me-auto">Toast Title</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+        </div>
+    </div>
+</div>
 <div class="modal" id="loadingModal" tabindex="-1" role="dialog" aria-labelledby="loadingModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog modal-dialog-centered modal-sm">
         <div class="modal-content">
@@ -339,6 +375,100 @@
 
 
                     $('#dkxt_hocba_id_checkin').val(data.Dkxt_HB_ID);
+                
+                    $('#sp_view_mc_hocba').empty();
+
+                    if (data.Dkxt_HB_MinhChung_HB) {
+                        const ArrMCHocBa = data.Dkxt_HB_MinhChung_HB.split("#");
+                        if (ArrMCHocBa.length > 0) {
+
+                            for (i = 0; i < ArrMCHocBa.length; i++) {
+                                if (ArrMCHocBa[i].length > 0) {
+                                    var str_a = ` <a href="#"  onclick="showimg('${ArrMCHocBa[i]}', 2,${data.Dkxt_HB_ID})" class="link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover">Tệp ${i + 1}</a> `;
+                                    $('#sp_view_mc_hocba').append(str_a);
+                                }
+                            }
+                        }
+                        else {
+                            var str_a = ` <a style="color:red">Không có dữ liệu</a> `;
+                            $('#sp_view_mc_hocba').append(str_a);
+                        }
+                    }
+                    else {
+                        var str_a = ` <a style="color:red">Không có dữ liệu</a> `;
+                        $('#sp_view_mc_hocba').append(str_a);
+                    }
+
+                    $('#sp_view_mc_bang').empty();
+
+                    if (data.Dkxt_HB_MinhChung_Bang) {
+                        const ArrMCBang = data.Dkxt_HB_MinhChung_Bang.split("#");
+                        if (ArrMCBang.length > 0) {
+
+                            for (i = 0; i < ArrMCBang.length; i++) {
+                                if (ArrMCBang[i].length > 0) {
+                                    var str_a = ` <a href="#"  onclick="showimg('${ArrMCBang[i]}', 3,${data.Dkxt_HB_ID})" class="link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover">Tệp ${i + 1}</a> `;
+                                    $('#sp_view_mc_bang').append(str_a);
+                                }
+                            }
+                        }
+                        else {
+                            var str_a = ` <a style="color:red">Không có dữ liệu</a> `;
+                            $('#sp_view_mc_bang').append(str_a);
+                        }
+                    }
+                    else {
+                        var str_a = ` <a style="color:red">Không có dữ liệu</a> `;
+                        $('#sp_view_mc_bang').append(str_a);
+                    }
+
+                 
+                    $('#sp_view_mc_cccd').empty();
+
+                    if (data.Dkxt_HB_MinhChung_CCCD) {
+                        const ArrMCCCCD = data.Dkxt_HB_MinhChung_CCCD.split("#");
+                        if (ArrMCCCCD.length > 0) {
+
+                            for (i = 0; i < ArrMCCCCD.length; i++) {
+                                if (ArrMCCCCD[i].length > 0) {
+                                    var str_a = `<a href="#"  onclick="showimg('${ArrMCCCCD[i]}', 4,${data.Dkxt_HB_ID})" class="link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover">Tệp ${i + 1}</a> `;
+                                    $('#sp_view_mc_cccd').append(str_a);
+                                }
+                            }
+                        }
+                        else {
+                            var str_a = ` <a style="color:red">Không có dữ liệu</a> `;
+                            $('#sp_view_mc_cccd').append(str_a);
+                        }
+
+                    }
+                    else {
+                        var str_a = ` <a style="color:red">Không có dữ liệu</a> `;
+                        $('#sp_view_mc_cccd').append(str_a);
+                    }
+
+                    $('#sp_view_mc_uutien').empty();
+
+                    if (data.Dkxt_HB_MinhChung_UuTien) {
+                        const ArrMCUutien = data.Dkxt_HB_MinhChung_UuTien.split("#");
+                        if (ArrMCUutien.length > 0) {
+
+                            for (i = 0; i < ArrMCUutien.length; i++) {
+                                if (ArrMCUutien[i].length > 0) {
+                                    var str_a = ` <a href="#"  onclick="showimg('${ArrMCUutien[i]}', 5,${data.Dkxt_HB_ID})" class="link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover">Tệp ${i + 1}</a> `;
+                                    $('#sp_view_mc_uutien').append(str_a);
+                                }
+                            }
+                        }
+                        else {
+                            var str_a = ` <a style="color:red">Không có dữ liệu</a> `;
+                            $('#sp_view_mc_uutien').append(str_a);
+                        }
+                    }
+                    else {
+                        var str_a = ` <a style="color:red">Không có dữ liệu</a> `;
+                        $('#sp_view_mc_uutien').append(str_a);
+                    }
                 }
             },
             error: function (errormessage) {
@@ -801,5 +931,58 @@
     // button tắt cửa sổ thêm mới phía dưới
     $('#bt_close_div_update_aspirations_second').click(function () {
         window.location.href = '/DangKyXetTuyens/Dkxthocba'
+    });
+</script>
+<script>
+    function showimg(url, loaimc, id_key) {
+
+        $("#hiden_duongdan_file_xoa").val(url);
+        $('#hiden_loai_minhchung_xoa').val(loaimc);
+
+        var pdf_view = document.getElementById("pdf_view");
+        pdf_view.style.display = "none";
+        pdf_view.style.height = "0px";
+
+        $('#img_view').hide();
+        $("#img_view").attr("src", "");
+
+        
+        if (loaimc == 2) {
+            $('#img_txt_card_hearder').text('Minh chứng học bạ');
+        }
+        if (loaimc == 3) {
+            $('#img_txt_card_hearder').text('Minh chứng bằng');
+        }
+        if (loaimc == 4) {
+            $('#img_txt_card_hearder').text('Minh chứng căn cước công dân');
+        }
+        if (loaimc == 5) {
+            $('#img_txt_card_hearder').text('Minh chứng giấy tờ khác');
+        }
+        var lastChar = url.substr(url.length - 4); // => kiểm tra file pdf hoặc img
+
+        if (lastChar.toLowerCase() != ".pdf") {
+            pdf_view.style.display = "none";
+            pdf_view.style.height = "0px";
+
+            $("#img_view").attr("src", url);
+            $("#img_view").show();
+        }
+        if (lastChar.toLowerCase() === ".pdf") {
+            $("#img_view").hide();
+            pdf_view.style.display = "inline";
+            pdf_view.style.height = "700px";
+            $("#pdf_view").attr("src", url);
+            $("#pdf_view").show();
+        }
+        $('#div_view_img').show();
+    }
+    $(document).ready(function () {
+        $('#bt_close_div_view_img').click(function () {
+            $('#div_view_img').hide();
+            $("#img_view").attr("src", "");
+            $("#pdf_view").attr("src", "");
+            $('#img_txt_card_hearder').text('Hình ảnh minh chứng');
+        });
     });
 </script>
